--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 
 <div class="ipo-container" id="ipoContainer"></div>
 
-<script src="script.js"></script>
+<script src="Script.js"></script>
 </body>
 </html>
